jenkins-installation/jenkins-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
    - port: 8181
      targetPort: 8181
  selector:
    app: jenkins
---
