jenkins-installation/jenkins-ingress.yml
# TODO WITH OUT TLS CRT
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-server-application
spec:
  rules:
    - host: jenkins-server-application.com
      https:
        paths: /
        pathType: Prifix
        backend:
          service:
            name: jenkins
            port:
              number: 8181
---
# TODO WITH TLS CRT
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: jenkins-server-application
#spec:
#  tls:
#    - secretName: nginx-demo-com-tls # created secret for tls certificate --> kubectl create secret tls nginx-demo-com-tls --cert tls.crt --key tls.key
#      hosts:
#        - "restaurant.food.app.application.com"
#  rules:
#    - host: jenkins-server-application.com
#      https:
#        paths: /
#        pathType: Prifix
#        backend:
#          service:
#            name: jenkins
#            port:
#              number: 8181
---
